[gd_scene load_steps=13 format=2]

[ext_resource path="res://src/Player.gd" type="Script" id=1]
[ext_resource path="res://assets/player.png" type="Texture" id=2]
[ext_resource path="res://assets/player_walk_1.png" type="Texture" id=3]
[ext_resource path="res://assets/player_walk_2.png" type="Texture" id=4]
[ext_resource path="res://assets/player_air_4.png" type="Texture" id=5]
[ext_resource path="res://assets/player_air_2.png" type="Texture" id=6]
[ext_resource path="res://assets/player_air_3.png" type="Texture" id=7]
[ext_resource path="res://assets/player_air_1.png" type="Texture" id=8]
[ext_resource path="res://assets/player_walk_4.png" type="Texture" id=9]
[ext_resource path="res://assets/player_walk_3.png" type="Texture" id=10]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "default",
"speed": 5.0
}, {
"frames": [ ExtResource( 8 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 5 ) ],
"loop": true,
"name": "air",
"speed": 15.0
}, {
"frames": [ ExtResource( 3 ), ExtResource( 4 ), ExtResource( 10 ), ExtResource( 9 ) ],
"loop": true,
"name": "walk",
"speed": 15.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 4, 14.5 )

[node name="Player" type="KinematicBody2D"]
scale = Vector2( 2.5, 2.5 )
script = ExtResource( 1 )
gravity = 50.0
jump_force = 50.0

[node name="PlayerSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
animation = "walk"

[node name="PlayerArea" type="Area2D" parent="."]

[node name="PlayerCollider2" type="CollisionShape2D" parent="PlayerArea"]
position = Vector2( 0, 1.5 )
shape = SubResource( 2 )

[node name="PlayerCollider" type="CollisionShape2D" parent="."]
position = Vector2( 0, 1.5 )
shape = SubResource( 2 )

[node name="PlayerCamera" type="Camera2D" parent="."]
current = true
zoom = Vector2( 0.75, 0.75 )

[node name="PlayerAudio" type="AudioStreamPlayer" parent="."]
[connection signal="area_entered" from="PlayerArea" to="." method="_on_PlayerArea_area_entered"]
